test/valid/58215_unitFunc/unitFunc.agu
-- Author: 58215, Manuel Lourenço

let faz3(a, b) : Unit -> Int -> Int =
    if true then 3 else 3

let main : Unit = 
    print(faz3(unit,7))