test/invalid-syntax/58215_simpleNoName/simpleNoName.agu
-- Author: 58215, Manuel Lourenço

let main : Unit =
    let Int : 5